<resources>
    <string name="app_name">BMI</string>
    <string name="bmi">BMI:</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">OverWeight</string>
    <string name="hint_weight">Enter weight (kg)</string>
    <string name="hint_height">Enter height (cm)</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="value_required">Value Required</string>
    <string name="bmiText">Body Mass Index - More Info</string>
</resources>